--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://food2fork.com"
+  "proxy": "https://www.food2fork.com"
 }
